tests/fixtures/errors/invalid_preproc_builtin_in_assert.puml
@startuml
!assert %true() : unsupported builtin in deterministic subset
Alice -> Bob: unreachable
@enduml
